enable the pttn visualization by mouse movement on roi map, plan to add the qphi process function to the gui

--- a/example/sc5005/auto_azimuth_integrate_of_scan_data.ipynb
+++ b/example/sc5005/auto_azimuth_integrate_of_scan_data.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -55,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,25 +70,27 @@
      "output_type": "stream",
      "text": [
       "found dataset:\n",
-      "mount04_M22Lox_1.1\n",
-      "mount04_M22Lox_2.1\n",
-      "mount04_M22Lox_3.1\n",
-      "mount04_M22Lox_4.1\n",
-      "mount04_M22Lox_5.1\n",
-      "mount04_M22Lox_6.1\n",
-      "mount04_M22Lox_7.1\n",
       "mount04_M22Lox_pos2_1.1\n",
-      "mount04_M22Lox_pos2_2.1\n",
-      "mount04_M22Lox_pos2_3.1\n",
-      "mount04_M22Lox_pos2_4.1\n",
-      "mount04_M22Lox_pos2_5.1\n",
-      "mount04_M22Lox_pos2_6.1\n",
-      "mount04_M22Lox_pos2_7.1\n",
-      "mount04_M22Lox_pos2_8.1\n",
-      "mount04_M22Lox_pos2_9.1\n",
+      "\n",
+      "sample:\n",
+      "mount04\n",
+      "\n",
+      "dataset:\n",
+      "mount04_M22Lox_pos2\n",
+      "\n",
+      "scan:\n",
+      "scan00001\n",
+      "\n",
+      "data information:\n",
+      "{'scan_type': 'dscan', 'scan_axis': 'nnp3', 'start_pos': '-10', 'end_pos': '10', 'num_step': '100', 'exposure_time': '0.075'}\n",
+      "\n",
+      "detector position:\n",
+      "300.0\n",
+      "\n",
+      "1 h5 files in this scan\n",
       "\n",
       "\n",
-      "More than one scan matched, please give more specific input\n"
+      "\n"
      ]
     }
    ],
@@ -90,7 +99,8 @@
     "t1 = id13_h5_search(proposal_path,proposal_num)\n",
     "\n",
     "sample_keywords = [\n",
-    "              ['Lox'],\n",
+    "              ['mount04_M22Lox_pos2_1.1'],\n",
+    "    #['mount04_M22Lox_pos2_2.1']\n",
     "              #['ATT']\n",
     "              #['mount05','BM2N','pos1'],\n",
     "              ]\n",
@@ -102,9 +112,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:silx.opencl.common:Unable to import pyOpenCl. Please install it from: http://pypi.python.org/pypi/pyopencl\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found dataset:\n",
+      "mount04_M22Lox_pos2_1.1\n",
+      "\n",
+      "sample:\n",
+      "mount04\n",
+      "\n",
+      "dataset:\n",
+      "mount04_M22Lox_pos2\n",
+      "\n",
+      "scan:\n",
+      "scan00001\n",
+      "\n",
+      "data information:\n",
+      "{'scan_type': 'dscan', 'scan_axis': 'nnp3', 'start_pos': '-10', 'end_pos': '10', 'num_step': '100', 'exposure_time': '0.075'}\n",
+      "\n",
+      "detector position:\n",
+      "300.0\n",
+      "\n",
+      "1 h5 files in this scan\n",
+      "\n",
+      "\n",
+      "\n",
+      "[]\n",
+      "found dataset:\n",
+      "mount04_M22Lox_pos2_1.1\n",
+      "\n",
+      "sample:\n",
+      "mount04\n",
+      "\n",
+      "dataset:\n",
+      "mount04_M22Lox_pos2\n",
+      "\n",
+      "scan:\n",
+      "scan00001\n",
+      "\n",
+      "data information:\n",
+      "{'scan_type': 'dscan', 'scan_axis': 'nnp3', 'start_pos': '-10', 'end_pos': '10', 'num_step': '100', 'exposure_time': '0.075'}\n",
+      "\n",
+      "detector position:\n",
+      "300.0\n",
+      "\n",
+      "1 h5 files in this scan\n",
+      "\n",
+      "\n",
+      "\n",
+      "[['mount04_M22Lox_pos2_1.1']]\n"
+     ]
+    }
+   ],
    "source": [
     "# to automatically all the scan shown in previous cell\n",
     "# if save = True, the result of azimuth integration will be save within the folder \"hdf_file\" under save_path directory\n",
@@ -116,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
