--- a/example/sc5005/diffraction_pattern_stitch.ipynb
+++ b/example/sc5005/diffraction_pattern_stitch.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,15 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26.545389890670776\n",
-      "53.01822209358215\n"
+      "26.652448654174805\n",
+      "52.82443380355835\n"
      ]
     },
     {
@@ -183,24 +183,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14.346120119094849\n",
-      "20.218199253082275\n"
+      "8.610817909240723\n",
+      "16.8000545501709\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f58666cb9d0>"
+       "<matplotlib.image.AxesImage at 0x7f666a0f0bd0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,24 +270,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.359252214431763\n",
-      "17.281795263290405\n"
+      "10.364548921585083\n",
+      "17.115023374557495\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f5866974a50>"
+       "<matplotlib.image.AxesImage at 0x7f665be7c0d0>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
